Harden the comment handling of the merge driver
A deletion on one side now conflicts with a comment change on the other,
the guard for comments an @Comment block swallows reads the file in its own
encoding instead of assuming UTF-8, and it matches the entry type the way
the parser does: case-insensitively, indentation allowed.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_014xQwRqLx2R27m7xFYPfAdK